--- a/st/PKGBUILD
+++ b/st/PKGBUILD
@@ -2,33 +2,33 @@
 # Maintainer: Christoph Vigano <mail@cvigano.de>
 
 pkgname=st
-pkgver=0.8.1
-pkgrel=1
+pkgver=0.8.2
+pkgrel=10
 pkgdesc='A simple virtual terminal emulator for X.'
 arch=('i686' 'x86_64')
 license=('MIT')
 depends=('libxft' 'libxext' 'xorg-fonts-misc')
 makedepends=('ncurses')
 url="http://st.suckless.org"
-_patches=(https://st.suckless.org/patches/scrollback/st-scrollback-20181224-096b125.diff
-          https://st.suckless.org/patches/scrollback/st-scrollback-mouse-0.8.diff)
+_patches=(https://st.suckless.org/patches/alpha/st-alpha-0.8.2.diff
+          https://st.suckless.org/patches/scrollback/st-scrollback-20200504-28ad288.diff
+          https://st.suckless.org/patches/scrollback/st-scrollback-mouse-0.8.2.diff
+          https://raw.githubusercontent.com/cog1to/st-ligatures/master/st-ligatures-alpha-scrollback-20200406-28ad288.diff)
 source=(http://dl.suckless.org/st/$pkgname-$pkgver.tar.gz
         config.h
         ${_patches[@]})
-sha256sums=('c4fb0fe2b8d2d3bd5e72763e80a8ae05b7d44dbac8f8e3bb18ef0161c7266926'
-            'SKIP'
-            'f7ef43f1fcdd11e2d9c8512aa66266da9248c5970b86594196093cb60bc71609'
-            '3fb38940cc3bad3f9cd1e2a0796ebd0e48950a07860ecf8523a5afd0cd1b5a44')
+sha256sums=(SKIP
+            SKIP
+            SKIP
+            SKIP
+            SKIP
+            SKIP)
 
 prepare() {
   cd $srcdir/$pkgname-$pkgver
   # skip terminfo which conflicts with nsurses
   sed -i '/tic /d' Makefile
   cp $srcdir/config.h config.h
-
-  # patch the scrollback patch
-  sed -i '1,12d' "$srcdir/$(basename ${_patches[0]})"
-  sed -i '1,20d' "$srcdir/$(basename ${_patches[1]})"
 
   for patch in "${_patches[@]}"; do
     echo "Applying patch $(basename $patch)..."
