[AwesomeWM] Switch from scrot to maim

--- a/picom/.config/picom/picom.conf
+++ b/picom/.config/picom/picom.conf
@@ -8,8 +8,13 @@ utility       = { shadow = false; };
 blur: {
 	method = "dual_kawase";
 	strength = 6;
+
 }
 
 opacity-rule = [
 	"80:class_g = 'XTerm'",
 ]
+
+blur-background-exclude = [
+	"class_g = 'slop'"
+];
