--- a/st/PKGBUILD
+++ b/st/PKGBUILD
@@ -1,19 +1,16 @@
-# Contributor: Patrick Jackson <PatrickSJackson gmail com>
-# Maintainer: Christoph Vigano <mail@cvigano.de>
-
 pkgname=st
-pkgver=0.8.2
-pkgrel=10
+pkgver=0.8.3
+pkgrel=1
 pkgdesc='A simple virtual terminal emulator for X.'
 arch=('i686' 'x86_64')
 license=('MIT')
 depends=('libxft' 'libxext' 'xorg-fonts-misc')
 makedepends=('ncurses')
 url="http://st.suckless.org"
-_patches=(https://st.suckless.org/patches/alpha/st-alpha-0.8.2.diff
-          https://st.suckless.org/patches/scrollback/st-scrollback-20200504-28ad288.diff
-          https://st.suckless.org/patches/scrollback/st-scrollback-mouse-0.8.2.diff
-          https://raw.githubusercontent.com/cog1to/st-ligatures/master/st-ligatures-alpha-scrollback-20200406-28ad288.diff)
+_patches=(st-alpha-0.8.2.diff
+          st-scrollback-20200504-28ad288.diff
+          st-scrollback-mouse-20191024-a2c479c.diff
+          st-ligatures-alpha-scrollback-20200430-0.8.3.diff)
 source=(http://dl.suckless.org/st/$pkgname-$pkgver.tar.gz
         config.h
         ${_patches[@]})
