[picom] Added ignores for Chrome, VLC and tdesktop

--- a/picom/.config/picom/picom.conf
+++ b/picom/.config/picom/picom.conf
@@ -5,16 +5,36 @@ dropdown_menu = { shadow = false; };
 popup_menu    = { shadow = false; };
 utility       = { shadow = false; };
 
-blur: {
-	method = "dual_kawase";
-	strength = 6;
+shadow-exclude = [
+    "! name~=''",
+    "name *= 'VLC'",
+    "name *= 'compton'",
+    "name *= 'Chromium'",
+    "name *= 'Chrome'",
+    "class_g = 'Firefox' && argb",
+    "class_g = 'Conky'",
+    "class_g ?= 'Notify-osd'",
+    "_GTK_FRAME_EXTENTS@:c",
+    "_NET_WM_STATE@:32a *= '_NET_WM_STATE_HIDDEN'"
+];
 
+blur: {
+    method = "dual_kawase";
+    strength = 6;
 }
 
 opacity-rule = [
-	"80:class_g = 'XTerm'",
+    "80:class_g = 'XTerm'",
+    
+    "0:_NET_WM_STATE@:32a *= '_NET_WM_STATE_HIDDEN'",
+    "0:_NET_WM_STATE@[0]:32a *= '_NET_WM_STATE_HIDDEN'",
+    "0:_NET_WM_STATE@[1]:32a *= '_NET_WM_STATE_HIDDEN'",
+    "0:_NET_WM_STATE@[2]:32a *= '_NET_WM_STATE_HIDDEN'",
+    "0:_NET_WM_STATE@[3]:32a *= '_NET_WM_STATE_HIDDEN'",
+    "0:_NET_WM_STATE@[4]:32a *= '_NET_WM_STATE_HIDDEN'",
 ]
 
 blur-background-exclude = [
-	"class_g = 'slop'"
+    "class_g = 'slop'",
+    "class_g = 'TelegramDesktop'",
 ];
