[gitconfig] Add LFS settings and enforce Github SSH usage

--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -4,3 +4,12 @@
 
 [core]
     excludesfile = /home/thevar1able/.gitignore_global
+
+[filter "lfs"]
+    clean = git-lfs clean -- %f
+    smudge = git-lfs smudge -- %f
+    process = git-lfs filter-process
+    required = true
+
+[url "ssh://git@github.com/"]
+    insteadOf = https://github.com/
