[gitconfig] Enable signing by default, use git:// instead of ssh:// for Github

--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -12,7 +12,11 @@
 	process = git-lfs filter-process
 	required = true
 
-[url "ssh://git@github.com/"]
+[url "git://github.com/"]
 	insteadOf = https://github.com/
+
 [pull]
 	ff = only
+
+[commit]
+	gpgsign = true
