[X] Support the new trackball

--- a/X/xorg.conf.d/50-trackball.conf
+++ b/X/xorg.conf.d/50-trackball.conf
@@ -1,5 +1,5 @@
 Section "InputClass"
-        Identifier "Logitech Trackball"
+        Identifier "Logitech Trackball|Logitech ERGO M575"
         MatchProduct "Logitech M570"
         MatchIsPointer "on"
         Driver "evdev"
