--- a/st/PKGBUILD
+++ b/st/PKGBUILD
@@ -8,9 +8,9 @@ depends=('libxft' 'libxext' 'xorg-fonts-misc')
 makedepends=('ncurses')
 url="http://st.suckless.org"
 _patches=(st-alpha-0.8.2.diff
-          st-scrollback-20200504-28ad288.diff
+          st-scrollback-20201205-4ef0cbd.diff
           st-scrollback-mouse-20191024-a2c479c.diff
-          st-ligatures-alpha-scrollback-20200430-0.8.3.diff)
+          st-scrollback-mouse-altscreen-20200416-5703aa0.diff)
 source=(http://dl.suckless.org/st/$pkgname-$pkgver.tar.gz
         config.h
         ${_patches[@]})
