--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -5,6 +5,8 @@
 
 [core]
 	excludesfile = /home/thevar1able/.gitignore_global
+        fsmonitor = true
+        untrackedcache = true
 
 [filter "lfs"]
 	clean = git-lfs clean -- %f
@@ -17,3 +19,5 @@
 
 [commit]
 	gpgsign = true
+[gpg]
+	program = /opt/homebrew/bin/gpg
