[gitconfig] Enable gpg

--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -1,10 +1,12 @@
 [user]
-	name = Konstantin Bogdnaov
+	name = Konstantin Bogdanov
 	email = var1able@var1able.ru
 	signingkey = 32217A73EB950E9EE55036A3DB399448D9FE52F1
 
 [core]
 	excludesfile = /home/thevar1able/.gitignore_global
+        fsmonitor = true
+        untrackedcache = true
 
 [filter "lfs"]
 	clean = git-lfs clean -- %f
@@ -12,11 +14,10 @@
 	process = git-lfs filter-process
 	required = true
 
-[url "git://github.com/"]
-	insteadOf = https://github.com/
-
 [pull]
 	ff = only
 
 [commit]
 	gpgsign = true
+[gpg]
+	program = /opt/homebrew/bin/gpg
